Fixes - Fixed word break in seotest

--- a/css/seotest.css
+++ b/css/seotest.css
@@ -20,11 +20,10 @@ small{font-size:13px;line-height: 22px;}
 .infobox tbody tr td{border-bottom:solid 1px #EEE}
 .infobox tbody tr:last-child td{border:none}
 .infobox th, .infobox td{text-align:left;padding:3px 10px;font-weight:100}
-.infobox td{color:#444;font-weight:600;min-width:150px;min-width:300px}
+.infobox td{color:#444;font-weight:600;min-width:150px;min-width:300px;word-break: break-word;}
 .infobox a{color:#595959}
 .infobox a:hover{color:#ff6600}
 .infobox .count{font-weight:900;font-size:18px;padding:0 20px;line-height:50px;background:#0099cc;}
-
 .shader{width:100%;height:100%;position:fixed;top:0;left:0;background:#F3F3F3;z-index:1000}
 .popup{position:fixed;top:50px;left:30%;width:40%;z-index:2000;background:#FFF;padding:20px;text-align:center}
 .popup h1{text-align:center;color:#0099cc;text-transform:uppercase;font-weight:bold;font-size:36px;padding:0;margin:5px 0 10px 0;}
@@ -32,4 +31,3 @@ small{font-size:13px;line-height: 22px;}
 .popup label{line-height:30px;float:left;padding:0px 0px 0 5px;margin-bottom:20px;}
 .popup button{display:block;clear:both;width:20%;margin-left:40%;padding:10px;font-size:20px;text-transform:uppercase;font-weight:bold;background:#E9E9E9;border:none;}
 .popup button:hover{color:#FFF;background:#0066CC;cursor:pointer}
-
